<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:id="@+id/menu_home"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btnL_Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#00273995"
        android:text="@string/notes" />

    <Button
        android:id="@+id/btnl_Trash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#00273995"
        android:text="@string/trash" />

    <Button
        android:id="@+id/btnL_Setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#00273995"
        android:text="@string/setting" />

    <Button
        android:id="@+id/btnL_Helps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="#00273995"
        android:text="@string/help" />
</LinearLayout>